# music-organizer

./: .SESSION_HANDOFF.md  .UPGRADED_PLAN.md  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CONTRIBUTING.md  PHASE4_COMPLETION_SUMMARY.md  PHASE6_READINESS_CHECKLIST.md  README.md  SESSION_HANDOFF.md  START_PHASE6_HERE.md  V1.0_STABILIZATION_PLAN.md  local_smoke_test.py  local_verification.py  pyproject.toml  requirements.txt
app/backend/: main.py
app/backend/models/: __init__.py
app/backend/routes/: __init__.py
app/backend/services/: __init__.py  auth_service.py  spotdl_service.py  spotify_service.py
app/backend/store/: __init__.py
desktop/: .gitignore  README.md  TESTING_NOTES.md  package-lock.json  package.json  src-tauri.d.ts
desktop/src/: App.tsx  api.ts  index.css  store.tsx  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: PHASE6_DESCRIPTIVE_PLAN.md  design.md  implementation-plan-v2.1.md
src/: classify.py  fileops.py  main.py  reporting.py  rules.py  scanner.py  tags.py
src/music_organizer/: __init__.py  __main__.py  classify.py  cli.py  fileops.py  journal.py  main.py  presets.py  reporting.py  rules.py  scanner.py  tags.py
tests/: conftest.py  test_api.py  test_auth_routes.py  test_auth_service.py  test_classify.py  test_cli.py  test_download_routes.py  test_fileops.py  test_journal.py  test_models.py  test_models_spotify.py  test_organize.py  test_presets.py  test_reporting.py  test_scanner.py  test_services.py  test_spotdl_service.py  test_spotify_routes.py  test_spotify_service.py  test_store.py  test_store_spotify.py
(+32 files in other folders)
