[package]
name = "music-organizer-desktop"
version = "2.1.0"
description = "Desktop UI for Music Organizer"
authors = ["you"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
